added order to query